KubernetesJavaWorkshop/schedule-app/manifests/deploy-schedule.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-schedule-sample
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: schedule-deployment
    spec:
      containers:
      - name: microservice-schedule
        image: microservice-schedule:latest
#       env:
#       - name: EXTERNAL_IP_ADDR
#         valueFrom:
#           configMapKeyRef:
#             name: ipaddr-config
#             key: EXTERNAL_IP_ADDR
        ports:
          - containerPort: 9080
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: keystore
          mountPath: /etc/wlp/config/keystore
        - name: truststore
          mountPath: /etc/wlp/config/truststore
        - name: liberty-config
          mountPath: /config/configDropins
        readinessProbe:
          httpGet:
            path: /schedule/nessProbe
            port: 9080
      volumes:
       - name: keystore
         secret:
           secretName: mb-keystore
       - name: truststore
         secret:
           secretName: mb-truststore
       - name: liberty-config
         configMap:
           name: liberty-logging-config
           items:
             - key: keystore.xml
               path: defaults/keystore.xml
             - key: logging.xml
               path: defaults/logging.xml
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-service
spec:
  ports:
    - port: 9080
  selector:
    name: schedule-deployment
